added documentation for authentiecation

--- a/docs/apis/mmadu-service-api.adoc
+++ b/docs/apis/mmadu-service-api.adoc
@@ -10,6 +10,60 @@ v0.0.1, 2018-09-04
 :imagesdir: {page-root}/images
 :permalink: /:title/
 :page-layout: api
-:snippets: ../../transfer-service/apidocs/snippets
+:snippets: snippets
 
 == Introduction
+
+Mmadu is basically a user management service. Mmadu takes care of routine operations like user
+management, authentication, domain management and so on.
+
+== What's New
+
+=== v.0.0.1
+* Api for creating and updating user information created.
+* Api for authenticating username and password information has been created.
+
+== Getting Started
+
+Mmadu service uses MongoDB for storing user information. By default, it uses the
+default mongo connections to create the database.
+
+=== Steps to Run Mmadu User Service
+To run Mmadu User service, take the following steps:
+
+. Pull the code from https://github.com/geraldoyudo/mmadu[GitHub]
+. Ensure that MongoDB is running.
+. Open terminal and execute the following
+
+----
+cd mmadu-user-service
+mvn spring-boot:run
+----
+== API Features
+
+=== Authentication
+
+Using the rest api, you can authenticate users given a username and
+password.
+
+A post request authenticates a user on a domain.
+
+==== Request Fields
+
+include::{snippets}/authentication-documentation/authentication/1/request-fields.adoc[]
+
+Example:
+
+include::{snippets}/authentication-documentation/authentication/1/http-request.adoc[]
+
+=== Response Fields
+
+This API returns a JSON response with the following fields:
+
+include::{snippets}/authentication-documentation/authentication/1/response-fields.adoc[]
+
+Example:
+
+include::{snippets}/authentication-documentation/authentication/1/http-response.adoc[]
+
+
