--- a/docs/apis/mmadu-service-api.adoc
+++ b/docs/apis/mmadu-service-api.adoc
@@ -33,7 +33,7 @@ Example:
 
 include::{snippets}/authentication-documentation/authentication/1/http-request.adoc[]
 
-=== Response Fields
+==== Response Fields
 
 This API returns a JSON response with the following fields:
 
@@ -43,4 +43,98 @@ Example:
 
 include::{snippets}/authentication-documentation/authentication/1/http-response.adoc[]
 
+=== User Management
 
+With Mmadu user service, you can manage your users across any domain.
+
+==== Domains
+
+A client application references users in one domain. A domain is referenced by a domain id. Applications
+can share the same user base by using the same domain id.
+
+==== AppUsers
+
+An AppUser contains user information for a specific user. A user should have a username, password,
+id, and a domain id. Other properties can be stored in the "properties" property of the user.
+
+
+==== Creating A User
+
+A POST request will create a user.
+
+===== Request Fields
+
+include::{snippets}/user-management-documentation/create-user/1/request-fields.adoc[]
+
+Example:
+
+include::{snippets}/user-management-documentation/create-user/1/http-request.adoc[]
+
+
+===== Response Fields
+
+This API returns a HTTP 201 CREATED response with an empty body.
+
+
+==== Getting A User with an ID
+
+A GET request will get a user with an ID.
+
+===== Path Parameters
+
+include::{snippets}/user-management-documentation/getting-a-user-by-id/1/path-parameters.adoc[]
+
+Example:
+
+include::{snippets}/user-management-documentation/getting-a-user-by-id/1/http-request.adoc[]
+
+
+===== Response Fields
+
+This API returns an AppUser with these fields:
+
+include::{snippets}/user-management-documentation/getting-a-user-by-id/1/response-fields.adoc[]
+
+Example:
+
+include::{snippets}/user-management-documentation/getting-a-user-by-id/1/http-response.adoc[]
+
+==== Getting All Users Across Domains
+
+A GET request will get all users regardless of domains.
+
+Example:
+
+include::{snippets}/user-management-documentation/getting-all-users/1/http-request.adoc[]
+
+
+===== Response Fields
+
+This API returns a list of all users with these fields:
+
+include::{snippets}/user-management-documentation/getting-all-users/1/response-fields.adoc[]
+
+Example:
+
+include::{snippets}/user-management-documentation/getting-all-users/1/http-response.adoc[]
+
+==== Removing A User with an ID
+
+A DELETE request will remove a user with an ID.
+
+===== Path Parameters
+
+include::{snippets}/user-management-documentation/deleting-a-user-by-id/1/path-parameters.adoc[]
+
+Example:
+
+include::{snippets}/user-management-documentation/deleting-a-user-by-id/1/http-request.adoc[]
+
+
+===== Response Fields
+
+This API returns a HTTP 204 NO CONTENT response.
+
+Example:
+
+include::{snippets}/user-management-documentation/deleting-a-user-by-id/1/http-response.adoc[]
