--- a/docs/apis/snippets/authentication-documentation/authentication/1/request-body.adoc
+++ b/docs/apis/snippets/authentication-documentation/authentication/1/request-body.adoc
@@ -1,8 +1,8 @@
 [source,options="nowrap"]
 ----
 {
-  "domain" : "test",
-  "username" : "user",
-  "password" : "password"
+  "domain" : "test-app",
+  "username" : "test-user",
+  "password" : "my-password"
 }
 ----
