--- a/docs/apis/snippets/user-management-documentation/create-user/1/curl-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/create-user/1/curl-request.adoc
@@ -10,7 +10,7 @@ $ curl 'http://localhost:8080/appUsers' -i -X POST \
   "authorities" : [ "admin" ],
   "properties" : {
     "country" : "Nigeria",
-    "favourite-color" : "blue"
+    "favourite-colour" : "blue"
   }
 }'
 ----
