--- a/docs/apis/snippets/user-management-documentation/create-user/1/request-body.adoc
+++ b/docs/apis/snippets/user-management-documentation/create-user/1/request-body.adoc
@@ -9,7 +9,7 @@
   "authorities" : [ "admin" ],
   "properties" : {
     "country" : "Nigeria",
-    "favourite-color" : "blue"
+    "favourite-colour" : "blue"
   }
 }
 ----
