--- a/docs/apis/snippets/user-management-documentation/getting-all-users-in-a-domain/1/response-body.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-all-users-in-a-domain/1/response-body.adoc
@@ -1,9 +1,5 @@
-[source,http,options="nowrap"]
+[source,options="nowrap"]
 ----
-HTTP/1.1 200 OK
-Content-Type: application/hal+json;charset=UTF-8
-Content-Length: 1994
-
 {
   "_embedded" : {
     "appUsers" : [ {
@@ -64,14 +60,7 @@ Content-Length: 1994
   },
   "_links" : {
     "self" : {
-      "href" : "http://localhost:8080/appUsers{?page,size,sort}",
-      "templated" : true
-    },
-    "profile" : {
-      "href" : "http://localhost:8080/profile/appUsers"
-    },
-    "search" : {
-      "href" : "http://localhost:8080/appUsers/search"
+      "href" : "http://localhost:8080/appUsers/search/findByDomainId?page=0&size=20"
     }
   },
   "page" : {
