--- a/docs/apis/snippets/authentication-documentation/authentication/1/http-request.adoc
+++ b/docs/apis/snippets/authentication-documentation/authentication/1/http-request.adoc
@@ -3,11 +3,11 @@
 POST /authenticate HTTP/1.1
 Content-Type: application/json
 Host: localhost:8080
-Content-Length: 77
+Content-Length: 89
 
 {
-  "domain" : "test",
-  "username" : "user",
-  "password" : "password"
+  "domain" : "test-app",
+  "username" : "test-user",
+  "password" : "my-password"
 }
 ----
