--- a/docs/apis/snippets/authentication-documentation/authentication/1/httpie-request.adoc
+++ b/docs/apis/snippets/authentication-documentation/authentication/1/httpie-request.adoc
@@ -1,9 +1,9 @@
 [source,bash]
 ----
 $ echo '{
-  "domain" : "test",
-  "username" : "user",
-  "password" : "password"
+  "domain" : "test-app",
+  "username" : "test-user",
+  "password" : "my-password"
 }' | http POST 'http://localhost:8080/authenticate' \
     'Content-Type:application/json'
 ----
