implemented token security for /appUser

--- a/docs/apis/snippets/user-management-documentation/create-user/1/curl-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/create-user/1/curl-request.adoc
@@ -1,6 +1,7 @@
 [source,bash]
 ----
 $ curl 'http://localhost:8080/appUsers' -i -X POST \
+    -H 'domain-auth-token: 1234' \
     -d '{
   "id" : "12345ABCDEF",
   "username" : "test-user",
