--- a/docs/apis/snippets/user-management-documentation/create-user/1/httpie-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/create-user/1/httpie-request.adoc
@@ -11,5 +11,6 @@ $ echo '{
     "country" : "Nigeria",
     "favourite-colour" : "blue"
   }
-}' | http POST 'http://localhost:8080/appUsers'
+}' | http POST 'http://localhost:8080/appUsers' \
+    'domain-auth-token:1234'
 ----
