--- a/docs/apis/snippets/user-management-documentation/deleting-a-user-by-id/1/curl-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/deleting-a-user-by-id/1/curl-request.adoc
@@ -1,4 +1,5 @@
 [source,bash]
 ----
-$ curl 'http://localhost:8080/appUsers/12345ABCDEF' -i -X DELETE
+$ curl 'http://localhost:8080/appUsers/12345ABCDEF' -i -X DELETE \
+    -H 'domain-auth-token: 1234'
 ----
