--- a/docs/apis/snippets/user-management-documentation/getting-a-user-by-id/1/httpie-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-a-user-by-id/1/httpie-request.adoc
@@ -1,4 +1,5 @@
 [source,bash]
 ----
-$ http GET 'http://localhost:8080/appUsers/12345ABCDEF'
+$ http GET 'http://localhost:8080/appUsers/12345ABCDEF' \
+    'domain-auth-token:1234'
 ----
