--- a/docs/apis/snippets/authentication-documentation/authentication/1/http-response.adoc
+++ b/docs/apis/snippets/authentication-documentation/authentication/1/http-response.adoc
@@ -2,6 +2,12 @@
 ----
 HTTP/1.1 200 OK
 Content-Type: application/json;charset=UTF-8
+X-Content-Type-Options: nosniff
+X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
+Expires: 0
+X-Frame-Options: DENY
 Content-Length: 26
 
 {"status":"AUTHENTICATED"}
