--- a/docs/apis/snippets/user-management-documentation/create-user/1/http-response.adoc
+++ b/docs/apis/snippets/user-management-documentation/create-user/1/http-response.adoc
@@ -2,5 +2,11 @@
 ----
 HTTP/1.1 201 Created
 Location: http://localhost:8080/appUsers/12345ABCDEF
+X-Content-Type-Options: nosniff
+X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
+Expires: 0
+X-Frame-Options: DENY
 
 ----
