--- a/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/curl-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/curl-request.adoc
@@ -1,4 +1,5 @@
 [source,bash]
 ----
-$ curl 'http://localhost:8080/appUsers/search/findByUsernameAndDomainId?username=test-user&domainId=test-app' -i -X GET
+$ curl 'http://localhost:8080/appUsers/search/findByUsernameAndDomainId?username=test-user&domainId=test-app' -i -X GET \
+    -H 'domain-auth-token: 1234'
 ----
