--- a/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/httpie-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/httpie-request.adoc
@@ -1,4 +1,5 @@
 [source,bash]
 ----
-$ http GET 'http://localhost:8080/appUsers/search/findByUsernameAndDomainId?username=test-user&domainId=test-app'
+$ http GET 'http://localhost:8080/appUsers/search/findByUsernameAndDomainId?username=test-user&domainId=test-app' \
+    'domain-auth-token:1234'
 ----
