--- a/docs/apis/snippets/user-management-documentation/getting-all-users-in-a-domain/1/httpie-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-all-users-in-a-domain/1/httpie-request.adoc
@@ -1,4 +1,5 @@
 [source,bash]
 ----
-$ http GET 'http://localhost:8080/appUsers/search/findByDomainId?domainId=test-app'
+$ http GET 'http://localhost:8080/appUsers/search/findByDomainId?domainId=test-app' \
+    'domain-auth-token:1234'
 ----
