--- a/docs/apis/snippets/user-management-documentation/getting-all-users/1/http-response.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-all-users/1/http-response.adoc
@@ -2,11 +2,35 @@
 ----
 HTTP/1.1 200 OK
 Content-Type: application/hal+json;charset=UTF-8
-Content-Length: 1994
+X-Content-Type-Options: nosniff
+X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
+Expires: 0
+X-Frame-Options: DENY
+Content-Length: 2503
 
 {
   "_embedded" : {
     "appUsers" : [ {
+      "username" : "test-user",
+      "password" : "my-password",
+      "domainId" : "test-app",
+      "roles" : [ "admin-role" ],
+      "authorities" : [ "admin" ],
+      "properties" : {
+        "country" : "Nigeria",
+        "favourite-colour" : "blue"
+      },
+      "_links" : {
+        "self" : {
+          "href" : "http://localhost:8080/appUsers/12345ABCDEF"
+        },
+        "appUser" : {
+          "href" : "http://localhost:8080/appUsers/12345ABCDEF"
+        }
+      }
+    }, {
       "username" : "test-user0",
       "password" : "my-password0",
       "domainId" : "test-app",
@@ -76,7 +100,7 @@ Content-Length: 1994
   },
   "page" : {
     "size" : 20,
-    "totalElements" : 3,
+    "totalElements" : 4,
     "totalPages" : 1,
     "number" : 0
   }
