--- a/docs/apis/snippets/user-management-documentation/getting-all-users/1/httpie-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-all-users/1/httpie-request.adoc
@@ -1,4 +1,5 @@
 [source,bash]
 ----
-$ http GET 'http://localhost:8080/appUsers'
+$ http GET 'http://localhost:8080/appUsers' \
+    'domain-auth-token:2222'
 ----
