--- a/docs/apis/snippets/user-management-documentation/updating-user-properties/1/curl-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-user-properties/1/curl-request.adoc
@@ -2,5 +2,6 @@
 ----
 $ curl 'http://localhost:8080/appUsers/12345ABCDEF' -i -X PATCH \
     -H 'Content-Type: application/json' \
+    -H 'domain-auth-token: 1234' \
     -d '{"password":"new-password","properties":{"favourite-colour":"green"}}'
 ----
