--- a/docs/apis/snippets/user-management-documentation/updating-user-properties/1/http-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-user-properties/1/http-request.adoc
@@ -2,6 +2,7 @@
 ----
 PATCH /appUsers/12345ABCDEF HTTP/1.1
 Content-Type: application/json
+domain-auth-token: 1234
 Host: localhost:8080
 Content-Length: 69
 
