--- a/docs/apis/snippets/user-management-documentation/updating-user-properties/1/httpie-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-user-properties/1/httpie-request.adoc
@@ -1,5 +1,6 @@
 [source,bash]
 ----
 $ echo '{"password":"new-password","properties":{"favourite-colour":"green"}}' | http PATCH 'http://localhost:8080/appUsers/12345ABCDEF' \
-    'Content-Type:application/json'
+    'Content-Type:application/json' \
+    'domain-auth-token:1234'
 ----
