secured app domain api

--- a/docs/apis/snippets/domain-management-documentation/create-a-domain/1/httpie-request.adoc
+++ b/docs/apis/snippets/domain-management-documentation/create-a-domain/1/httpie-request.adoc
@@ -3,5 +3,6 @@
 $ echo '{
   "id" : "00111111",
   "name" : "new-domain"
-}' | http POST 'http://localhost:8080/appDomains'
+}' | http POST 'http://localhost:8080/appDomains' \
+    'domain-auth-token:2222'
 ----
