--- a/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/curl-request.adoc
+++ b/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/curl-request.adoc
@@ -1,4 +1,5 @@
 [source,bash]
 ----
-$ curl 'http://localhost:8080/appDomains' -i -X GET
+$ curl 'http://localhost:8080/appDomains' -i -X GET \
+    -H 'domain-auth-token: 2222'
 ----
