--- a/docs/apis/snippets/domain-management-documentation/create-a-domain/1/curl-request.adoc
+++ b/docs/apis/snippets/domain-management-documentation/create-a-domain/1/curl-request.adoc
@@ -1,6 +1,7 @@
 [source,bash]
 ----
 $ curl 'http://localhost:8080/appDomains' -i -X POST \
+    -H 'domain-auth-token: 2222' \
     -d '{
   "id" : "00111111",
   "name" : "new-domain"
