--- a/docs/apis/snippets/domain-management-documentation/create-a-domain/1/http-request.adoc
+++ b/docs/apis/snippets/domain-management-documentation/create-a-domain/1/http-request.adoc
@@ -1,6 +1,7 @@
 [source,http,options="nowrap"]
 ----
 POST /appDomains HTTP/1.1
+domain-auth-token: 2222
 Host: localhost:8080
 Content-Length: 51
 
