--- a/docs/apis/snippets/domain-management-documentation/deleting-a-domain-by-id/1/curl-request.adoc
+++ b/docs/apis/snippets/domain-management-documentation/deleting-a-domain-by-id/1/curl-request.adoc
@@ -1,4 +1,5 @@
 [source,bash]
 ----
-$ curl 'http://localhost:8080/appDomains/00111111' -i -X DELETE
+$ curl 'http://localhost:8080/appDomains/00111111' -i -X DELETE \
+    -H 'domain-auth-token: 2222'
 ----
