--- a/docs/apis/snippets/domain-management-documentation/deleting-a-domain-by-id/1/httpie-request.adoc
+++ b/docs/apis/snippets/domain-management-documentation/deleting-a-domain-by-id/1/httpie-request.adoc
@@ -1,4 +1,5 @@
 [source,bash]
 ----
-$ http DELETE 'http://localhost:8080/appDomains/00111111'
+$ http DELETE 'http://localhost:8080/appDomains/00111111' \
+    'domain-auth-token:2222'
 ----
