--- a/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/httpie-request.adoc
+++ b/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/httpie-request.adoc
@@ -1,4 +1,5 @@
 [source,bash]
 ----
-$ http GET 'http://localhost:8080/appDomains'
+$ http GET 'http://localhost:8080/appDomains' \
+    'domain-auth-token:2222'
 ----
