--- a/docs/apis/snippets/domain-management-documentation/updating-a-domain/1/curl-request.adoc
+++ b/docs/apis/snippets/domain-management-documentation/updating-a-domain/1/curl-request.adoc
@@ -2,5 +2,6 @@
 ----
 $ curl 'http://localhost:8080/appDomains/00111111' -i -X PATCH \
     -H 'Content-Type: application/json' \
+    -H 'domain-auth-token: 2222' \
     -d '{"name":"changed-name"}'
 ----
