removed authentication advice, used domain permission evaluator for authenticate api

--- a/docs/apis/snippets/authentication-documentation/authentication/1/curl-request.adoc
+++ b/docs/apis/snippets/authentication-documentation/authentication/1/curl-request.adoc
@@ -2,6 +2,7 @@
 ----
 $ curl 'http://localhost:8080/authenticate' -i -X POST \
     -H 'Content-Type: application/json' \
+    -H 'domain-auth-token: 1234' \
     -d '{
   "domain" : "test-app",
   "username" : "test-user",
