--- a/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/response-body.adoc
+++ b/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/response-body.adoc
@@ -23,7 +23,7 @@
         }
       }
     }, {
-      "name" : "test-domain",
+      "name" : "test",
       "_links" : {
         "self" : {
           "href" : "http://localhost:8080/appDomains/test-app"
