--- a/docs/apis/snippets/authentication-documentation/authentication/1/http-request.adoc
+++ b/docs/apis/snippets/authentication-documentation/authentication/1/http-request.adoc
@@ -2,6 +2,7 @@
 ----
 POST /authenticate HTTP/1.1
 Content-Type: application/json
+domain-auth-token: 1234
 Host: localhost:8080
 Content-Length: 89
 
