--- a/docs/apis/snippets/authentication-documentation/authentication/1/httpie-request.adoc
+++ b/docs/apis/snippets/authentication-documentation/authentication/1/httpie-request.adoc
@@ -5,5 +5,6 @@ $ echo '{
   "username" : "test-user",
   "password" : "my-password"
 }' | http POST 'http://localhost:8080/authenticate' \
-    'Content-Type:application/json'
+    'Content-Type:application/json' \
+    'domain-auth-token:1234'
 ----
