--- a/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/http-response.adoc
+++ b/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/http-response.adoc
@@ -8,7 +8,7 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 1140
+Content-Length: 1421
 
 {
   "_embedded" : {
@@ -42,6 +42,16 @@ Content-Length: 1140
           "href" : "http://localhost:8080/appDomains/test-app"
         }
       }
+    }, {
+      "name" : "Test domain For Config",
+      "_links" : {
+        "self" : {
+          "href" : "http://localhost:8080/appDomains/1111111111"
+        },
+        "appDomain" : {
+          "href" : "http://localhost:8080/appDomains/1111111111"
+        }
+      }
     } ]
   },
   "_links" : {
@@ -55,7 +65,7 @@ Content-Length: 1140
   },
   "page" : {
     "size" : 20,
-    "totalElements" : 3,
+    "totalElements" : 4,
     "totalPages" : 1,
     "number" : 0
   }
