--- a/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/response-body.adoc
+++ b/docs/apis/snippets/domain-management-documentation/getting-all-domains/1/response-body.adoc
@@ -32,6 +32,16 @@
           "href" : "http://localhost:8080/appDomains/test-app"
         }
       }
+    }, {
+      "name" : "Test domain For Config",
+      "_links" : {
+        "self" : {
+          "href" : "http://localhost:8080/appDomains/1111111111"
+        },
+        "appDomain" : {
+          "href" : "http://localhost:8080/appDomains/1111111111"
+        }
+      }
     } ]
   },
   "_links" : {
@@ -45,7 +55,7 @@
   },
   "page" : {
     "size" : 20,
-    "totalElements" : 3,
+    "totalElements" : 4,
     "totalPages" : 1,
     "number" : 0
   }
