--- a/docs/apis/snippets/domain-configuration-documentation/get-default-domain-configuration/1/http-response.adoc
+++ b/docs/apis/snippets/domain-configuration-documentation/get-default-domain-configuration/1/http-response.adoc
@@ -8,17 +8,17 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 322
+Content-Length: 267
 
 {
-  "domainId" : "test-app",
-  "authenticationApiToken" : "1",
+  "domainId" : "",
+  "authenticationApiToken" : "",
   "_links" : {
     "self" : {
-      "href" : "http://localhost:8080/domainConfigurations/5ce2db1ae48b6541bce4968e"
+      "href" : "http://localhost:8080/domainConfigurations/0"
     },
     "domainConfiguration" : {
-      "href" : "http://localhost:8080/domainConfigurations/5ce2db1ae48b6541bce4968e"
+      "href" : "http://localhost:8080/domainConfigurations/0"
     }
   }
 }
