implemented get all users

--- a/docs/apis/snippets/user-management-documentation/create-user/1/request-body.adoc
+++ b/docs/apis/snippets/user-management-documentation/create-user/1/request-body.adoc
@@ -1,4 +1,4 @@
 [source,options="nowrap"]
 ----
-{"username":"user","password":"password","roles":["admin"],"authorities":["manage-users"],"color":"blue"}
+{"id":null,"username":"user","password":"password","roles":["admin"],"authorities":["manage-users"],"color":"blue"}
 ----
