--- a/docs/apis/snippets/user-management-documentation/getting-all-users/1/response-fields.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-all-users/1/response-fields.adoc
@@ -1,40 +1,24 @@
 |===
 |Path|Type|Description
 
-|`+_embedded.appUsers.[].domainId+`
+|`+content.[].id+`
 |`+String+`
-|Domain Id of the user
+|The user's unique identification
 
-|`+_embedded.appUsers.[].username+`
+|`+content.[].username+`
 |`+String+`
 |Username of the user
 
-|`+_embedded.appUsers.[].password+`
+|`+content.[].username+`
 |`+String+`
 |password of the user
 
-|`+_embedded.appUsers.[].roles+`
+|`+content.[].roles+`
 |`+string list+`
 |List of roles assigned to this user
 
-|`+_embedded.appUsers.[].authorities+`
+|`+content.[].authorities+`
 |`+string list+`
 |List of authorities given to ths user
-
-|`+_embedded.appUsers.[].properties+`
-|`+map+`
-|Other user properties
-
-|`+_embedded.appUsers.[]._links+`
-|`+map+`
-|User item resource links
-
-|`+_links+`
-|`+map+`
-|Resource links
-
-|`+page+`
-|`+map+`
-|Page information
 
 |===
