--- a/docs/apis/snippets/user-management-documentation/create-user/1/http-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/create-user/1/http-request.adoc
@@ -4,7 +4,7 @@ POST /domains/test-app/users HTTP/1.1
 Content-Type: application/json
 domain-auth-token: 2222
 Host: localhost:8080
-Content-Length: 105
+Content-Length: 115
 
-{"username":"user","password":"password","roles":["admin"],"authorities":["manage-users"],"color":"blue"}
+{"id":null,"username":"user","password":"password","roles":["admin"],"authorities":["manage-users"],"color":"blue"}
 ----
