--- a/docs/apis/snippets/user-management-documentation/getting-all-users/1/http-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-all-users/1/http-request.adoc
@@ -1,6 +1,6 @@
 [source,http,options="nowrap"]
 ----
-GET /appUsers HTTP/1.1
+GET /domains/test-app/users HTTP/1.1
 domain-auth-token: 2222
 Host: localhost:8080
 
