--- a/docs/apis/snippets/user-management-documentation/getting-all-users/1/http-response.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-all-users/1/http-response.adoc
@@ -1,108 +1,14 @@
 [source,http,options="nowrap"]
 ----
 HTTP/1.1 200 OK
-Content-Type: application/hal+json;charset=UTF-8
+Content-Type: application/json;charset=UTF-8
 X-Content-Type-Options: nosniff
 X-XSS-Protection: 1; mode=block
 Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 2503
+Content-Length: 705
 
-{
-  "_embedded" : {
-    "appUsers" : [ {
-      "username" : "test-user",
-      "password" : "my-password",
-      "domainId" : "test-app",
-      "roles" : [ "admin-role" ],
-      "authorities" : [ "admin" ],
-      "properties" : {
-        "country" : "Nigeria",
-        "favourite-colour" : "blue"
-      },
-      "_links" : {
-        "self" : {
-          "href" : "http://localhost:8080/appUsers/12345ABCDEF"
-        },
-        "appUser" : {
-          "href" : "http://localhost:8080/appUsers/12345ABCDEF"
-        }
-      }
-    }, {
-      "username" : "test-user0",
-      "password" : "my-password0",
-      "domainId" : "test-app",
-      "roles" : [ "admin-role" ],
-      "authorities" : [ "admin" ],
-      "properties" : {
-        "country" : "Nigeria",
-        "favourite-color" : "blue"
-      },
-      "_links" : {
-        "self" : {
-          "href" : "http://localhost:8080/appUsers/12345ABCDEF0"
-        },
-        "appUser" : {
-          "href" : "http://localhost:8080/appUsers/12345ABCDEF0"
-        }
-      }
-    }, {
-      "username" : "test-user1",
-      "password" : "my-password1",
-      "domainId" : "test-app",
-      "roles" : [ "admin-role" ],
-      "authorities" : [ "admin" ],
-      "properties" : {
-        "country" : "Nigeria",
-        "favourite-color" : "blue"
-      },
-      "_links" : {
-        "self" : {
-          "href" : "http://localhost:8080/appUsers/12345ABCDEF1"
-        },
-        "appUser" : {
-          "href" : "http://localhost:8080/appUsers/12345ABCDEF1"
-        }
-      }
-    }, {
-      "username" : "test-user2",
-      "password" : "my-password2",
-      "domainId" : "test-app",
-      "roles" : [ "admin-role" ],
-      "authorities" : [ "admin" ],
-      "properties" : {
-        "country" : "Nigeria",
-        "favourite-color" : "blue"
-      },
-      "_links" : {
-        "self" : {
-          "href" : "http://localhost:8080/appUsers/12345ABCDEF2"
-        },
-        "appUser" : {
-          "href" : "http://localhost:8080/appUsers/12345ABCDEF2"
-        }
-      }
-    } ]
-  },
-  "_links" : {
-    "self" : {
-      "href" : "http://localhost:8080/appUsers{?page,size,sort}",
-      "templated" : true
-    },
-    "profile" : {
-      "href" : "http://localhost:8080/profile/appUsers"
-    },
-    "search" : {
-      "href" : "http://localhost:8080/appUsers/search"
-    }
-  },
-  "page" : {
-    "size" : 20,
-    "totalElements" : 4,
-    "totalPages" : 1,
-    "number" : 0
-  }
-}
+{"content":[{"id":"3d602a2a64844528ae4ea51f17f0eeeb","username":"test-user0","password":"my-password0","roles":["admin-role"],"authorities":["admin"],"country":"Nigeria","favourite-color":"blue"},{"id":"4b202a4c389a4fe8be3c4c472c838386","username":"test-user1","password":"my-password1","roles":["admin-role"],"authorities":["admin"],"country":"Nigeria","favourite-color":"blue"},{"id":"d79e313d0e33469e896c985ea31b5891","username":"test-user2","password":"my-password2","roles":["admin-role"],"authorities":["admin"],"country":"Nigeria","favourite-color":"blue"}],"totalPages":1,"totalElements":3,"last":true,"size":20,"number":0,"sort":{"sorted":false,"unsorted":true},"numberOfElements":3,"first":true}
 ----
