implemented get user by external id

--- a/docs/apis/snippets/user-management-documentation/getting-a-user-by-id/1/path-parameters.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-a-user-by-id/1/path-parameters.adoc
@@ -1,8 +1,11 @@
-.+/appUsers/{userId}+
+.+/domains/{domainId}/users/{userId}+
 |===
 |Parameter|Description
 
 |`+userId+`
 |The user's ID
+
+|`+domainId+`
+|The domain id of the user
 
 |===
