--- a/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/http-response.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/http-response.adoc
@@ -8,9 +8,10 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 435
+Content-Length: 466
 
 {
+  "externalId" : "123453432",
   "username" : "test-user",
   "password" : "my-password",
   "domainId" : "test-app",
