--- a/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/response-body.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/response-body.adoc
@@ -1,6 +1,7 @@
 [source,options="nowrap"]
 ----
 {
+  "externalId" : "123453432",
   "username" : "test-user",
   "password" : "my-password",
   "domainId" : "test-app",
