--- a/docs/apis/snippets/user-management-documentation/getting-a-user-by-id/1/http-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-a-user-by-id/1/http-request.adoc
@@ -1,7 +1,7 @@
 [source,http,options="nowrap"]
 ----
-GET /appUsers/12345ABCDEF HTTP/1.1
-domain-auth-token: 1234
+GET /domains/test-app/users/123453432 HTTP/1.1
+domain-auth-token: 2222
 Host: localhost:8080
 
 ----
