--- a/docs/apis/snippets/user-management-documentation/getting-all-users-in-a-domain/1/http-response.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-all-users-in-a-domain/1/http-response.adoc
@@ -8,11 +8,12 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 2332
+Content-Length: 3016
 
 {
   "_embedded" : {
     "appUsers" : [ {
+      "externalId" : "123453432",
       "username" : "test-user",
       "password" : "new-password",
       "domainId" : "test-app",
@@ -31,6 +32,7 @@ Content-Length: 2332
         }
       }
     }, {
+      "externalId" : "123453432",
       "username" : "test-user0",
       "password" : "my-password0",
       "domainId" : "test-app",
@@ -49,6 +51,7 @@ Content-Length: 2332
         }
       }
     }, {
+      "externalId" : "123453432",
       "username" : "test-user1",
       "password" : "my-password1",
       "domainId" : "test-app",
@@ -67,6 +70,7 @@ Content-Length: 2332
         }
       }
     }, {
+      "externalId" : "123453432",
       "username" : "test-user2",
       "password" : "my-password2",
       "domainId" : "test-app",
@@ -84,6 +88,24 @@ Content-Length: 2332
           "href" : "http://localhost:8080/appUsers/12345ABCDEF2"
         }
       }
+    }, {
+      "externalId" : "b4c09b542f7b48dc89ef341be6e9e72c",
+      "username" : "user",
+      "password" : "password",
+      "domainId" : "test-app",
+      "roles" : [ "admin" ],
+      "authorities" : [ "manage-users" ],
+      "properties" : {
+        "color" : "blue"
+      },
+      "_links" : {
+        "self" : {
+          "href" : "http://localhost:8080/appUsers/5cfa5046d4638749d8c3e75a"
+        },
+        "appUser" : {
+          "href" : "http://localhost:8080/appUsers/5cfa5046d4638749d8c3e75a"
+        }
+      }
     } ]
   },
   "_links" : {
@@ -93,7 +115,7 @@ Content-Length: 2332
   },
   "page" : {
     "size" : 20,
-    "totalElements" : 4,
+    "totalElements" : 5,
     "totalPages" : 1,
     "number" : 0
   }
