--- a/docs/apis/snippets/user-management-documentation/getting-all-users-in-a-domain/1/response-body.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-all-users-in-a-domain/1/response-body.adoc
@@ -3,6 +3,7 @@
 {
   "_embedded" : {
     "appUsers" : [ {
+      "externalId" : "123453432",
       "username" : "test-user",
       "password" : "new-password",
       "domainId" : "test-app",
@@ -21,6 +22,7 @@
         }
       }
     }, {
+      "externalId" : "123453432",
       "username" : "test-user0",
       "password" : "my-password0",
       "domainId" : "test-app",
@@ -39,6 +41,7 @@
         }
       }
     }, {
+      "externalId" : "123453432",
       "username" : "test-user1",
       "password" : "my-password1",
       "domainId" : "test-app",
@@ -57,6 +60,7 @@
         }
       }
     }, {
+      "externalId" : "123453432",
       "username" : "test-user2",
       "password" : "my-password2",
       "domainId" : "test-app",
@@ -74,6 +78,24 @@
           "href" : "http://localhost:8080/appUsers/12345ABCDEF2"
         }
       }
+    }, {
+      "externalId" : "b4c09b542f7b48dc89ef341be6e9e72c",
+      "username" : "user",
+      "password" : "password",
+      "domainId" : "test-app",
+      "roles" : [ "admin" ],
+      "authorities" : [ "manage-users" ],
+      "properties" : {
+        "color" : "blue"
+      },
+      "_links" : {
+        "self" : {
+          "href" : "http://localhost:8080/appUsers/5cfa5046d4638749d8c3e75a"
+        },
+        "appUser" : {
+          "href" : "http://localhost:8080/appUsers/5cfa5046d4638749d8c3e75a"
+        }
+      }
     } ]
   },
   "_links" : {
@@ -83,7 +105,7 @@
   },
   "page" : {
     "size" : 20,
-    "totalElements" : 4,
+    "totalElements" : 5,
     "totalPages" : 1,
     "number" : 0
   }
