--- a/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/http-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-a-user-by-username-and-domain/1/http-request.adoc
@@ -1,7 +1,7 @@
 [source,http,options="nowrap"]
 ----
-GET /appUsers/search/findByUsernameAndDomainId?username=test-user&domainId=test-app HTTP/1.1
-domain-auth-token: 1234
+GET /domains/test-app/users/load?username=test-user HTTP/1.1
+domain-auth-token: 2222
 Host: localhost:8080
 
 ----
