--- a/docs/apis/snippets/user-management-documentation/updating-user-properties/1/path-parameters.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-user-properties/1/path-parameters.adoc
@@ -1,6 +1,9 @@
-.+/appUsers/{userId}+
+.+/domains/{domainId}/users/{userId}+
 |===
 |Parameter|Description
+
+|`+domainId+`
+|The user's domain ID
 
 |`+userId+`
 |The user's ID
