changed authentication api to fit domain structure, improved domain permission handling

--- a/docs/apis/snippets/authentication-documentation/authentication/1/curl-request.adoc
+++ b/docs/apis/snippets/authentication-documentation/authentication/1/curl-request.adoc
@@ -1,10 +1,9 @@
 [source,bash]
 ----
-$ curl 'http://localhost:8080/authenticate' -i -X POST \
+$ curl 'http://localhost:8080/domains/test-app/authenticate' -i -X POST \
     -H 'Content-Type: application/json' \
     -H 'domain-auth-token: 1234' \
     -d '{
-  "domain" : "test-app",
   "username" : "test-user",
   "password" : "my-password"
 }'
