--- a/docs/apis/snippets/authentication-documentation/authentication/1/http-request.adoc
+++ b/docs/apis/snippets/authentication-documentation/authentication/1/http-request.adoc
@@ -1,13 +1,12 @@
 [source,http,options="nowrap"]
 ----
-POST /authenticate HTTP/1.1
+POST /domains/test-app/authenticate HTTP/1.1
 Content-Type: application/json
 domain-auth-token: 1234
 Host: localhost:8080
-Content-Length: 89
+Content-Length: 63
 
 {
-  "domain" : "test-app",
   "username" : "test-user",
   "password" : "my-password"
 }
