--- a/docs/apis/snippets/token-management-documentation/generate-token/1/http-response.adoc
+++ b/docs/apis/snippets/token-management-documentation/generate-token/1/http-response.adoc
@@ -8,7 +8,10 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 300
+Content-Length: 314
 
-{"id":"5cfd34240eaa9b62b0166e71","value":"8cfa32df748cc3657ebaff23fe95ce6f04dc5cf6a278bb5765a9502e4a5b4118b4dc5f9ce403a997ef717ea7071ff364a01cc739840b640f69d76ec32b04bae51e2ec24050ffd1795ab7c9cad27aae13b8c0bb6fb07cc55c0c09f2b275a370c15696f581fb06d48e4bd110e35b3184889c260ca805715e246c0ef55b4e8063fd"}
+{
+  "id" : "5cfe0174622cf3444cc21191",
+  "value" : "f829f903755fe0a32521d004ca15308b82e425a73f270ce12317d0b19788ec4b1e13ed3ed32e32ac90d453d293215bd0639c755de296f1b59151f1e2b3abf07200395f815ca4e4bf27af79a0c552a61914f45d4c35dc91b79f2144b0d5ae73e7bddc9cf26a976cdb4f8e18d2d3a1d3c0eebca19146537cb37ed0390872eb06bb"
+}
 ----
