--- a/docs/apis/snippets/user-management-documentation/create-user/1/httpie-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/create-user/1/httpie-request.adoc
@@ -1,6 +1,13 @@
 [source,bash]
 ----
-$ echo '{"id":null,"username":"user","password":"password","roles":["admin"],"authorities":["manage-users"],"color":"blue"}' | http POST 'http://localhost:8080/domains/test-app/users' \
+$ echo '{
+  "id" : null,
+  "username" : "user",
+  "password" : "password",
+  "roles" : [ "admin" ],
+  "authorities" : [ "manage-users" ],
+  "color" : "blue"
+}' | http POST 'http://localhost:8080/domains/test-app/users' \
     'Content-Type:application/json' \
     'domain-auth-token:1234'
 ----
