--- a/docs/apis/snippets/authentication-documentation/authentication/1/http-response.adoc
+++ b/docs/apis/snippets/authentication-documentation/authentication/1/http-response.adoc
@@ -8,7 +8,9 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 26
+Content-Length: 34
 
-{"status":"AUTHENTICATED"}
+{
+  "status" : "AUTHENTICATED"
+}
 ----
