--- a/docs/apis/snippets/user-management-documentation/create-user/1/curl-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/create-user/1/curl-request.adoc
@@ -3,5 +3,12 @@
 $ curl 'http://localhost:8080/domains/test-app/users' -i -X POST \
     -H 'Content-Type: application/json' \
     -H 'domain-auth-token: 1234' \
-    -d '{"id":null,"username":"user","password":"password","roles":["admin"],"authorities":["manage-users"],"color":"blue"}'
+    -d '{
+  "id" : null,
+  "username" : "user",
+  "password" : "password",
+  "roles" : [ "admin" ],
+  "authorities" : [ "manage-users" ],
+  "color" : "blue"
+}'
 ----
