--- a/docs/apis/snippets/user-management-documentation/create-user/1/http-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/create-user/1/http-request.adoc
@@ -4,7 +4,14 @@ POST /domains/test-app/users HTTP/1.1
 Content-Type: application/json
 domain-auth-token: 1234
 Host: localhost:8080
-Content-Length: 115
+Content-Length: 157
 
-{"id":null,"username":"user","password":"password","roles":["admin"],"authorities":["manage-users"],"color":"blue"}
+{
+  "id" : null,
+  "username" : "user",
+  "password" : "password",
+  "roles" : [ "admin" ],
+  "authorities" : [ "manage-users" ],
+  "color" : "blue"
+}
 ----
