--- a/docs/apis/snippets/user-management-documentation/getting-a-user-by-id/1/http-response.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-a-user-by-id/1/http-response.adoc
@@ -8,7 +8,15 @@ Cache-Control: no-cache, no-store, max-age=0, must-revalidate
 Pragma: no-cache
 Expires: 0
 X-Frame-Options: DENY
-Content-Length: 159
+Content-Length: 207
 
-{"id":"123453432","username":"test-user","password":"my-password","roles":["admin-role"],"authorities":["admin"],"favourite-colour":"blue","country":"Nigeria"}
+{
+  "id" : "123453432",
+  "username" : "test-user",
+  "password" : "my-password",
+  "roles" : [ "admin-role" ],
+  "authorities" : [ "admin" ],
+  "favourite-colour" : "blue",
+  "country" : "Nigeria"
+}
 ----
