--- a/docs/apis/snippets/user-management-documentation/getting-all-users/1/curl-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-all-users/1/curl-request.adoc
@@ -1,5 +1,5 @@
 [source,bash]
 ----
-$ curl 'http://localhost:8080/domains/test-app/users' -i -X GET \
+$ curl 'http://localhost:8080/domains/test-app/users?page=0&size=10' -i -X GET \
     -H 'domain-auth-token: 1234'
 ----
