--- a/docs/apis/snippets/user-management-documentation/getting-all-users/1/httpie-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/getting-all-users/1/httpie-request.adoc
@@ -1,5 +1,5 @@
 [source,bash]
 ----
-$ http GET 'http://localhost:8080/domains/test-app/users' \
+$ http GET 'http://localhost:8080/domains/test-app/users?page=0&size=10' \
     'domain-auth-token:1234'
 ----
