--- a/docs/apis/snippets/user-management-documentation/updating-user-properties/1/http-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-user-properties/1/http-request.adoc
@@ -4,7 +4,15 @@ PUT /domains/test-app/users/123453432 HTTP/1.1
 Content-Type: application/json
 domain-auth-token: 1234
 Host: localhost:8080
-Content-Length: 171
+Content-Length: 219
 
-{"id":"123453432","username":"changed-username","password":"changed-password","roles":["admin-role"],"authorities":["admin"],"favourite-colour":"blue","country":"Nigeria"}
+{
+  "id" : "123453432",
+  "username" : "changed-username",
+  "password" : "changed-password",
+  "roles" : [ "admin-role" ],
+  "authorities" : [ "admin" ],
+  "favourite-colour" : "blue",
+  "country" : "Nigeria"
+}
 ----
