--- a/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/request-body.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/request-body.adoc
@@ -1,7 +1,7 @@
 [source,options="nowrap"]
 ----
 {
-  "query" : "country equals 'Nigeria'",
+  "query" : "(country equals 'Nigeria')",
   "updates" : [ {
     "operation" : "SET",
     "property" : "color",
