--- a/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/curl-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/curl-request.adoc
@@ -4,7 +4,7 @@ $ curl 'http://localhost:8080/domains/test-app/users' -i -X PATCH \
     -H 'Content-Type: application/json' \
     -H 'domain-auth-token: 1234' \
     -d '{
-  "query" : "country equals 'Nigeria'",
+  "query" : "(country equals 'Nigeria')",
   "updates" : [ {
     "operation" : "SET",
     "property" : "color",
