--- a/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/httpie-request.adoc
+++ b/docs/apis/snippets/user-management-documentation/updating-users-by-query/1/httpie-request.adoc
@@ -1,7 +1,7 @@
 [source,bash]
 ----
 $ echo '{
-  "query" : "country equals 'Nigeria'",
+  "query" : "(country equals 'Nigeria')",
   "updates" : [ {
     "operation" : "SET",
     "property" : "color",
