--- a/docs/apis/snippets/token-management-documentation/get-auth-token-for-domain/1/response-body.adoc
+++ b/docs/apis/snippets/token-management-documentation/get-auth-token-for-domain/1/response-body.adoc
@@ -1,7 +1,7 @@
 [source,options="nowrap"]
 ----
 {
-  "tokenId" : null,
-  "domainId" : "0"
+  "tokenId" : "1",
+  "domainId" : "1111111111"
 }
 ----
