--- a/docs/apis/snippets/token-management-documentation/get-auth-token-for-domain/1/http-response.adoc
+++ b/docs/apis/snippets/token-management-documentation/get-auth-token-for-domain/1/http-response.adoc
@@ -2,16 +2,16 @@
 ----
 HTTP/1.1 200 OK
 Pragma: no-cache
+Content-Length: 53
 X-XSS-Protection: 1; mode=block
 Expires: 0
 X-Frame-Options: DENY
 X-Content-Type-Options: nosniff
 Content-Type: application/json;charset=UTF-8
 Cache-Control: no-cache, no-store, max-age=0, must-revalidate
-Content-Length: 45
 
 {
-  "tokenId" : null,
-  "domainId" : "0"
+  "tokenId" : "1",
+  "domainId" : "1111111111"
 }
 ----
